fixed contact form location info spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -335,12 +335,9 @@ a, a:hover
 }
 .location-info p span {
     width: 40px;
-    font-size: 24px;
+    font-size: 14px;
     color: black;
-		margin-left: 4em;
-		font-size: 14px;
-
-
+		margin-left: 2em;
 }
 
 .location-info p {
@@ -550,6 +547,16 @@ tr:hover {
 			font-size: 16px;
 			text-justify: newspaper;
 			word-spacing: -2px;
+		}
+
+		.location-info p {
+			font-size: 14px;
+
+			margin-left: 0px;
+		}
+
+		.location-info p span {
+			width: 20px;
 		}
 
 }
